--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Test.</p>
 <a href="homepage.html" class="btn btn-primary">Go somewhere</a>
 </body>
 </html>
