--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>test</h1>
 <p>Test.</p>
 <a href="homepage.html" class="btn btn-primary">Go somewhere</a>
 </body>
